--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,8 @@ category_map: # edit for Theme.shoka
   高等数学: math
   英语: english
   应用流体力学: 流体力学笔记
+  24张宇考研数学: zymath
+  基础30讲: zym30
   Theme Shoka Documentation: theme-shoka-doc
 tag_map:
 
