--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://note.hongyexian.xyz
+url: https://note.mikumoe.eu.org
 root: /
 permalink: :title/ # edit for Theme.shoka
 permalink_defaults:
